<resources>
    <string name="app_name">TaskManager</string>
    <string name="task_hint">New task…</string>
    <string name="new_task">New task</string>
    <string name="difficult_string">Difficult:</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_btn">Add</string>
    <string name="isEmpty_string">List is empty</string>

    <string name="zero_string">0</string>
    <string name="empty_title_error">Title of task is empty</string>

    <string-array name="difficult_arrays">
        <item>Low</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>
