<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_rounded_shape"
    android:minWidth="300dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:text="@string/new_task"
        android:textSize="24sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:hint="@string/task_hint"
        android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:textSize="@dimen/spacing_normal_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:text="@string/difficult_string" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/spacing_tiny_4"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:entries="@array/difficult_arrays" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal_16"
            android:layout_marginStart="30dp"
            android:text="@string/cancel_btn"
            android:background="@drawable/btn_ripple" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:text="@string/add_btn"
            android:background="@drawable/btn_ripple"/>
    </LinearLayout>
</LinearLayout>